--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <!-- ABOUT ME -->
     <section id="about_section" class="mt-52 lg:mx-32 text-textLight text-left md:flex justify-center gap-8 lg:gap-16 xl:gap-24">
-      <img src="https://images.unsplash.com/photo-1582399511849-ee8ea545ce53?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGJ1c2luZXNzJTIwd29tZW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="A Lady" class="w-5/6 sm:w-3/6 rounded-xl mx-auto">
+      <img src="./img/shreya/me.jpg" alt="A Lady" class="w-5/6 sm:w-3/6 rounded-xl mx-auto object-cover object-center border-4 border-secondary">
 
       <div class="my-16 flex flex-col gap-8">
         <h1 class="text-secondary text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-bold">About me</h1>
@@ -110,7 +110,7 @@
 
         <article class="card_article sm:w-4/6 lg:w-2/6 mx-auto p-6 border-2 border-secondary rounded-xl hover:-translate-y-3 hover:scale-105 hover:shadow-lg hover:shadow-secondary transition-all">
           <img src="./img/svg/working2.svg" alt="lady working" class="w-5/6 mx-auto">
-          <h1 class="text-2xl font-bold my-4"><i class="fa-solid fa-ciy mr-2"></i> Capsule Labs</h1>
+          <h1 class="text-2xl font-bold my-4"><i class="fa-solid fa-ciy mr-2"></i> Chai Pi Lo </h1>
           <hr class="opacity-50 mx-auto w-3/6">
           <p class="text-textDark mt-4 text-sm leading-6 indent-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto blanditiis deleniti quasi, assumenda possimus praesentium, enim sint dolorem quia accusantium odio, aut doloremque illum omnis. Obcaecati expedita rerum eum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, atque perspiciatis. Perferendis quod
             sapiente, sit
@@ -122,7 +122,7 @@
 
         <article class="card_article sm:w-4/6 lg:w-2/6 lg: mx-auto p-6 border-2 border-secondary rounded-xl hover:-translate-y-3 hover:scale-105 hover:shadow-lg hover:shadow-secondary transition-all">
           <img src="./img/svg/working4.svg" alt="lady working" class="w-5/6 mx-auto">
-          <h1 class="text-2xl font-bold my-4"><i class="fa-solid fa-ciy mr-2"></i> Capsule Labs</h1>
+          <h1 class="text-2xl font-bold my-4"><i class="fa-solid fa-ciy mr-2"></i> Chai Pi Lo </h1>
           <hr class="opacity-50 mx-auto w-3/6">
           <p class="text-textDark mt-4 text-sm leading-6 indent-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto blanditiis deleniti quasi, assumenda possimus praesentium, enim sint dolorem quia accusantium odio, aut doloremque illum omnis. Obcaecati expedita rerum eum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, atque perspiciatis. Perferendis quod
             sapiente, sit
@@ -134,7 +134,7 @@
 
         <article class="card_article sm:w-4/6 lg:w-2/6 mx-auto p-6 border-2 border-secondary rounded-xl hover:-translate-y-3 hover:scale-105 hover:shadow-lg hover:shadow-secondary transition-all">
           <img src="./img/svg/working3.svg" alt="lady working" class="w-5/6 mx-auto">
-          <h1 class="text-2xl font-bold my-4"><i class="fa-solid fa-ciy mr-2"></i> Capsule Labs</h1>
+          <h1 class="text-2xl font-bold my-4"><i class="fa-solid fa-ciy mr-2"></i> Chai Pi Lo </h1>
           <hr class="opacity-50 mx-auto w-3/6">
           <p class="text-textDark mt-4 text-sm leading-6 indent-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto blanditiis deleniti quasi, assumenda possimus praesentium, enim sint dolorem quia accusantium odio, aut doloremque illum omnis. Obcaecati expedita rerum eum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, atque perspiciatis. Perferendis quod
             sapiente, sit
@@ -151,8 +151,8 @@
   <!-- FOOTER -->
   <footer id="contact_section" class="w-4/6 mx-auto mb-12 mt-52 text-textLight">
     <div class="flex flex-col justify-center items-center  font-extrabold gap-8">
-      <img src="https://images.unsplash.com/photo-1542596768-5d1d21f1cf98?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE0fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="Me" class="w-28 h-28 rounded-full object-cover border-2 border-secondary">
-      <h1 class="text-4xl text-center">That's it bitches! <br> What more do you want?</h1>
+      <img src="./img/shreya/me2.jpg" alt="Me" class="w-28 h-28 rounded-full object-cover border-2 border-secondary">
+      <h1 class="text-4xl text-center">That's it! <br> What more do you want?</h1>
     </div>
 
     <div class="socials my-16 text-xl lg:text-2xl flex gap-5 md:gap-12 justify-center">
@@ -170,9 +170,9 @@
 
     <div class="text-center tracking-widest text-xs leading-6">
       <h2><i class="fa-regular fa-copyright"></i> 2022 <a href="#" class="hover:underline underline-offset-2 uppercase">Shreya Gupta</a></h2>
-      <h2>Developed by
+      <!-- <h2>Developed by
         <a href="https://varunbhabhra.bio.link/" target="__blank" class="hover:underline underline-offset-2 uppercase">Varun Bhabhra</a>
-      </h2>
+      </h2> -->
     </div>
   </footer>
 
